k8s/namespace-and-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubii
